eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: #bura aws ecr -daki imagenin linkini vur:latest
          # apply etmemishden evvel node-larin sayini autoscalingde desired capacity 1 ele aws consolede
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http-server
            - containerPort: 9090
              name: grpc-server
